Fixed weird alignment error with Book 2

--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ body {
     width: 40px;
     position: relative;
     transition: transform 0.4s ease;
+    
 }
 
 .book.interactive {
@@ -46,8 +47,6 @@ body {
     font-weight: bold;
     font-size: 12px;
     text-align: center;
-    display: block;
-    margin: auto;
     padding: 5px;
 }
 
@@ -59,7 +58,7 @@ body {
     font-size: 12px;
     text-align: center;
     display: block;
-    margin: auto;
+    margin: 5px 0;
     padding: 5px;
 }
 
